# powerdns-ui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  package-lock.json  pdns.conf  skills-lock.json
.agents/skills/angular-developer/references/: signal-forms.md
.agents/skills/development-standards/: SKILL.md
.agents/skills/development-standards/references/: fastapi.md
.agents/skills/powerdns/: SKILL.md
.claude/skills/: powerdns
.claude/skills/development-standards/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  pyproject.toml
.devcontainer/scripts/: post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: pyproject.toml
backend/app/: client_ip.py  config.py  cookies.py  database.py  dependencies.py  main.py  ratelimit.py  security.py
backend/app/models/: account.py  acme_key.py  audit_log.py  oidc_settings.py  record_type.py  smtp_settings.py  syslog_settings.py  token.py  user.py  zone_record_type.py
backend/app/routers/: acme.py  acme_keys.py  admin.py  audit.py  auth.py  autoprimaries.py  catalogues.py  health.py  networks.py  nic_update.py  pdns.py  server.py  tokens.py  tsigkeys.py  views.py
backend/app/schemas/: acme.py  admin.py  audit.py  auth.py  pdns.py  token.py
backend/app/services/: acme_service.py  admin_service.py  audit_service.py  auth_service.py  pdns_service.py  token_service.py
backend/app/static/swagger/: swagger-ui-bundle.js  swagger-ui.css
backend/scripts/: init_pdns_schema.py
examples/: docker-compose-mariadb.yml  docker-compose-sqlite3.yml
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json
frontend/public/i18n/: en.json  es.json  fr.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/core/guards/: admin.guard.ts  (+2 more)
scripts/: release.sh
(+69 files in other folders)
