[project]
name = "app"
version = "0.1.0"
description = "PowerDNS UI"
requires-python = ">=3.14"

dependencies = [
    # FastAPI + ASGI server
    "fastapi[standard]==0.136.3",
    "pydantic[email]",
    "pydantic-settings",
    # Async database
    "sqlmodel==0.0.38",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "aiomysql",
    "dnspython",
    "alembic",
    # Auth / Security
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    # HTTP client (for PDNS API + OIDC)
    "httpx",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "prek>=0.4.4",
    "ruff>=0.15.15",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
