[project]
name = "app"
version = "0.1.0"
description = "PowerDNS UI"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]==0.139.0",
    "pydantic[email]",
    "pydantic-settings",
    "sqlmodel==0.0.39",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "aiomysql",
    "dnspython",
    "alembic",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "httpx",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "prek>=0.4.8",
    "ruff>=0.15.21",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
